--- a/index.html
+++ b/index.html
@@ -1,30 +1,117 @@
-<!--This receipe is taken from https://cooking.nytimes.com/recipes/1012494-spinach-tofu-and-sesame-stir-fry -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Spinach, Tofu and Sesame Stir-Fry</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+  <style>
+    html {
+      font-size: 16px;
+    }
 
+    body {
+      font-family: 'Roboto', sans-serif;
+      line-height: 1.6;
+      color: #333;
+      margin: 0;
+      padding: 0;
+      background-color: #f9f9f9;
+    }
 
+    .container {
+      width: 1200px;
+      margin: auto;
+      padding: 40px;
+    }
 
-Spinach, Tofu and Sesame Stir-Fry
-By: Martha Rose Shulman
-Yield: 3 Servings
+    .columns {
+      display: flex;
+      gap: 40px;
+    }
 
-Ingredients
+    .left-column {
+      width: 40%;
+    }
 
-1 tablespoon canola oil
-½ pound tofu, cut in small dice
-1 large garlic clove, minced
-1 teaspoon grated or minced fresh ginger
-¼ teaspoon red chili flakes
-Soy sauce to taste
-16-ounce bag baby spinach, rinsed
-2 tablespoons toasted sesame seeds
-1 teaspoon sesame oil
+    .right-column {
+      width: 60%;
+    }
 
-Preparation
+    h1, h2, h3 {
+      font-family: 'Playfair Display', serif;
+      color: #2c3e50;
+    }
 
-Step 1
-Heat the canola oil over medium-high heat in a large nonstick skillet or wok, and add the tofu. Stir-fry until the tofu is lightly colored, three to five minutes, and add the garlic, ginger and chili flakes. Cook, stirring, until fragrant, about one minute, and add soy sauce to taste. Add the spinach and stir-fry until the spinach wilts, about one minute. Stir in the sesame seeds, and add more soy sauce to taste. Remove from the heat.
+    h1 {
+      font-size: 1.8em;
+      letter-spacing: -1px;
+      margin-bottom: 10px;
+    }
 
-Step 2
-Using tongs, transfer the spinach and tofu mixture to a serving bowl, leaving the liquid behind in the pan or wok. Drizzle with the sesame oil, and add more soy sauce as desired. Serve with rice or other grains, or noodles. You may also use it as a filling for whole wheat pita bread.
+    h2 {
+      font-size: 1.5em;
+      letter-spacing: -0.5px;
+      margin-bottom: 10px;
+    }
 
-Tip
-Advance preparation: This is a last-minute preparation, but you can have your ingredients prepared well in advance.
+    h3 {
+      font-size: 1em;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 1em;
+      line-height: 1.8;
+      letter-spacing: 0.2px;
+      color: #555;
+      margin-bottom: 20px;
+    }
+
+    ul {
+      padding: 0;
+    }
+
+    ul li {
+      font-size: 15px;
+      margin-bottom: 10px;
+    }
+
+    img {
+      width: 80%;
+      height: auto;
+      border-radius: 8px;
+      margin-bottom: 20px;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="columns">
+      <div class="left-column">
+        <h1>Spinach, Tofu and Sesame Stir-Fry</h1>
+        <h3>By: Martha Rose Shulman</h3>
+        <h2>Yield: 3 Servings</h2>
+        <h2>Ingredients</h2>
+        <ul>
+          <li>1 tablespoon canola oil</li>
+          <li>½ pound tofu, cut in small dice</li>
+          <li>1 large garlic clove, minced</li>
+          <li>1 teaspoon grated or minced fresh ginger</li>
+          <li>¼ teaspoon red chili flakes</li>
+          <li>Soy sauce to taste</li>
+          <li>16-ounce bag baby spinach, rinsed</li>
+          <li>2 tablespoons toasted sesame seeds</li>
+          <li>1 teaspoon sesame oil</li>
+        </ul>
+      </div>
+      <div class="right-column">
+        <img src="recipe-photo-Enhanced-SR.jpg" alt="Spinach, Tofu and Sesame Stir-Fry">
+        <h2>Preparation</h2>
+        <p><strong>Step 1:</strong> Heat the canola oil over medium-high heat in a large nonstick skillet or wok, and add the tofu. Stir-fry until the tofu is lightly colored, three to five minutes, and add the garlic, ginger and chili flakes. Cook, stirring, until fragrant, about one minute, and add soy sauce to taste. Add the spinach and stir-fry until the spinach wilts, about one minute. Stir in the sesame seeds, and add more soy sauce to taste. Remove from the heat.</p>
+        <p><strong>Step 2:</strong> Using tongs, transfer the spinach and tofu mixture to a serving bowl, leaving the liquid behind in the pan or wok. Drizzle with the sesame oil, and add more soy sauce as desired. Serve with rice or other grains, or noodles. You may also use it as a filling for whole wheat pita bread.</p>
+        <p><strong>Tip:</strong> Advance preparation: This is a last-minute preparation, but you can have your ingredients prepared well in advance.</p>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
